...
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <ImageButton
                style="?android:buttonBarButtonStyle"
                android:id="@+id/translateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/info"
...
                        android:padding="8dp"
                        android:src="@drawable/ic_email"
                        android:contentDescription="@string/icon"
                        android:layout_alignParentStart="true" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_username"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/icon_email"
                        android:hint="@string/username"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:layout_toEndOf="@+id/icon_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:imeActionId="6"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
...
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:src="@drawable/ic_password"
                        android:contentDescription="@string/icon" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/ic_password"
                        android:hint="@string/password"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        app:passwordToggleEnabled="true"
                        android:layout_toEndOf="@+id/ic_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/ic_password"
                            android:inputType="textPassword"
                            android:imeActionId="6"
                            android:imeOptions="actionDone"
...
                            tools:targetApi="o"
                            android:layout_toEndOf="@id/ic_password" />
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/forgot_password_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/link_color" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/button_background"
                    android:minWidth="88dp"
                    android:minHeight="48dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/title_activity_login"
                    android:textColor="@color/btn_text_color"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp" />


            </LinearLayout>
...
