...
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="scan_result">Scan Result</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="authenticating">Authenticating</string>
    <string name="email_invalid">Invalid email!</string>
    <string name="can_not_empty">Can\'t be empty!</string>
    <string name="select_image">Select Images</string>
    <string name="cancel">Cancel</string>
    <string name="enter_device_name">Mobile Phone Brand</string>
    <string name="enter_device_model">Model Name</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="adding_device_info">Adding Device Information…</string>
    <string name="history">History</string>
    <string name="verify_scan">Verify Scan</string>
    <string name="verify_scan_detail">Please verify IMEI number from scan and press OK to continue</string>
    <string name="checking">Checking</string>
    <string name="device_not_found">IMEI not found!</string>
    <string name="no_internet">No Internet!</string>
    <string name="yes_enable">Yes, enable it!</string>
    <string name="instruction_detail">
        &lt;html&gt;
         &lt;head&gt;&lt;/head&gt;
...
        </string>
    <string name="instructions">Instructions</string>
    <string name="session_expired">Session Expired!</string>
    <string name="session_expired_detail">Your session has expired. Please login again to continue using DCP.</string>
    <string name="type_imei">Type IMEI</string>
    <string name="scan_imei">Scan IMEI</string>
    <string name="password_should_be_min_six">Must be at least minimum 6 characters</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="verifying">Verifying</string>
    <string name="reset_email_sent">A reset email has been sent! Please check your email.</string>
    <string name="please_enter_password_to_reset">Please enter your email address to reset your password</string>
    <string name="no_records_found">No records found!</string>
...
